<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

       <Button
           android:id="@+id/ScreenshotImgFormatBtn"
           android:layout_width="fill_parent"
           android:layout_height="wrap_content"
           android:layout_marginBottom="20dip"
           android:layout_marginTop="40dip"
           android:text="@string/ScreenshotImgFormatBtnLabel" />
		<CheckBox
           android:id="@+id/playSoundOnCaptureChkBox"
           android:layout_width="fill_parent"
           android:layout_height="wrap_content"
           android:layout_marginBottom="20dip"
           android:checked="true"
           style="?android:attr/starStyle"
           android:text="@string/playSoundOnCaptureChkBoxLabel" />
       <EditText
           android:id="@+id/GetDefaultFileNameEntry"
           android:layout_width="fill_parent"
           android:layout_height="wrap_content"
           android:layout_marginBottom="20dip"
           android:hint="@string/GetDefaultFileNameEntryHint"
           android:singleLine="true" />
       
       <CheckBox
           android:id="@+id/appendTimeStampChkBox"
           android:layout_width="fill_parent"
           android:layout_height="wrap_content"
           android:layout_marginBottom="20dip"
           android:checked="true"
           style="?android:attr/starStyle"
           android:text="@string/appendTimeStampChkBoxLabel" />
       
       <Button
           android:id="@+id/PreviousShotsViewBtn"
           android:layout_width="fill_parent"
           android:layout_height="wrap_content"
           android:layout_marginBottom="20dip"
           android:text="@string/PreviousShotsViewBtnLabel" />
       
       <CheckBox
           android:id="@+id/delaySetChkBox"
           android:layout_width="fill_parent"
           android:layout_height="wrap_content"
           android:layout_marginBottom="20dip"
           android:checked="false"
           android:text="@string/delaySetChkBoxLabel" />

		<EditText
		    android:id="@+id/GetDelayEntry"
		    android:layout_width="fill_parent"
		    android:layout_height="wrap_content"
		    android:layout_marginBottom="20dip"
		    android:enabled="false"
		    android:hint="@string/GetDelayEntryHint"
		    android:inputType="number"
		    android:singleLine="true" />
       	
		<CheckBox
           android:id="@+id/shake2CaptureChkBox"
           android:layout_width="fill_parent"
           android:layout_height="wrap_content"
           android:layout_marginBottom="20dip"
           style="?android:attr/starStyle"
           android:text="@string/shake2CaptureChkBoxLabel" />
		
		<CheckBox
           android:id="@+id/gameCaptureModeChkBox"
           android:layout_width="fill_parent"
           android:layout_height="wrap_content"
           android:layout_marginBottom="20dip"
           style="?android:attr/starStyle"
           android:checked="false"
           android:text="@string/gameCaptureModeChkBoxLabel" />
		
		<Button
           android:id="@+id/StartScreenCaptureServiceBtn"
           android:layout_width="fill_parent"
           android:layout_height="wrap_content"
           android:layout_marginBottom="20dip"
           android:text="@string/StartScreenCaptureServiceBtnLabel" />

    </LinearLayout>
    

</ScrollView>